Various improvements to styling and functionality...
-Changed styling of project fader elements and expanded coverage of description to avoid unintentionally activating full screen image preview when moving away from project-description element
-Animated dark mode toggle switch
-Animated menu for mobile
-Replaced email address in header with an icon and added links to other header icons
-Moved projects page to load first

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,10 +2,11 @@ $highlightFont: #d387bc;
 $highlightLink: #ffa000;
 $header-color: rgb(59, 65, 71);
 $header-bg-color: rgb(39, 41, 43);
-$primary: #16a085;
+$primary: rgb(87, 74, 100);
 $header-height: 80px;
 $burger-dimensions: 40px;
 $menu-width: 220px;
 $image-height: 400px;
 $contactHeight: 3rem;
 $darkmode-bg-color: rgb(27, 24, 46);
+$darkmode-menu-color: rgb(46, 48, 51);
