--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -60,7 +60,7 @@ body {
         max-height: calc(#{$contactHeight} * 1.5);
         padding: 0;
         color: white;
-        background: $header-bg-color;
+        background: $darkmode-bg-color;
         clip-path: polygon(0.75% 0, 100% 0, 100% 100%, 0 100%);
         
         .logo {
@@ -78,7 +78,7 @@ body {
                 right: -5%;
                 width: 1px;
                 height: 140%;
-                transform: rotate(5deg);
+                transform: rotate(3deg);
             }
         }
 
@@ -97,7 +97,7 @@ body {
                 background-position: center;
             }
 
-            span {
+            a {
                 cursor: pointer;
                 margin: 0 10px;
                 font-size: 1rem;
@@ -111,7 +111,7 @@ body {
                 }
             }
 
-            #github-link, #linkedin-link {
+            #email-link, #github-link, #linkedin-link {
                 height: 100%;
                 width: 1.75rem;
                 background-image: url('./assets/github-logo.png');
@@ -124,6 +124,12 @@ body {
                 }
             }
 
+            #email-link {
+                background-image: url('./assets/email-icon.png');
+                &:hover {
+                    background-image: url('./assets/email-icon-hover.png');
+                }
+            }
             #linkedin-link {
                 background-image: url('./assets/linkedin-logo.png');
 
@@ -153,23 +159,14 @@ body {
         min-width: $menu-width;
         max-width: 500px;
         width: 15vw;
-        transition: right 400ms ease-out, opacity 0.5s ease;
+        transition: right 400ms ease-out, opacity 500ms ease;
         display: flex;
         justify-content: flex-end;
         align-items: flex-start;
-        background: rgba(0,0,0,0.97);
+        background-color: $darkmode-bg-color;
+        // background: rgba(0,0,0,0.97);
         clip-path: polygon(0 0, 100% 0, 60% 100%, 0% 100%);
         z-index: 1;
-
-        // &::after {
-        //     content: '';
-        //     position: absolute;
-        //     right: 43px;
-        //     width: 2px;
-        //     height: 100%;
-        //     background: white;
-        //     transform: rotate(2.5deg);
-        // }
 
         #darkmode-container {
             position: absolute;
@@ -189,7 +186,7 @@ body {
                 width: 30px;
                 height: 20px;
                 display: flex;
-                justify-content: flex-start;
+                // justify-content: flex-start;
                 align-items: center;
                 border: 1px solid white;
                 border-radius: 10px;
@@ -199,8 +196,10 @@ body {
                     width: 14px;
                     height: 14px;
                     margin: 0 2px;
+                    margin-left: 2px;
                     border-radius: 7px;
                     background: rgb(230,230,230);
+                    transition: margin 150ms ease-in;
                 }
             }
         }
@@ -327,13 +326,11 @@ body {
 .main {
     position: relative;
     height: 100vh;
-    // width: calc(100vw - #{$menu-width} * 0.8);
-    // margin-left: calc(#{$menu-width} * 0.8);
     width: calc(100vw - ((#{$menu-width} + 15vw) / 2));
-    // margin-left: $menu-width;
     margin-left: calc((#{$menu-width} + 15vw) / 2);
     overflow: hidden;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 
@@ -347,7 +344,13 @@ body {
         height: calc(#{$contactHeight} * 3);
         z-index: 1;
         background: linear-gradient(to bottom, white 60%, rgba(0,0,0,0) 100%);
-        // background: red;
+    }
+
+    .scrollToTop {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        cursor: pointer;
     }
 }
 
@@ -390,11 +393,11 @@ body {
 }
 
 #home {
-    display: flex;
+    display: none;
 }
 
 #projects {
-    display: none;
+    display: flex;
 }
 
 #contact {
@@ -408,18 +411,20 @@ body {
     align-items: center;
     width: 70%;
     max-width: 1300px;
-    padding: 1.5rem 2.5rem;
     opacity: 0;
     color: black;
-    background-color: rgba($highlightFont, 0.15);
-    clip-path: polygon(4% 0, 100% 0, 96% 100%, 0 100%);
+    // background-color: rgba($highlightFont, 0.45);
+    border-radius: 6px;
+    box-shadow: 0 2px 8px 0px rgba($primary, 0.95);
+    // clip-path: polygon(4% 0, 100% 0, 96% 100%, 0 100%);
     transform: translateX(25vw);
     transition: transform 650ms ease-out, opacity 250ms ease-in, width 400ms ease-in-out;
     
     .project-description {
-        max-width: 100%;
-        align-self: flex-start;
+        align-self: center;
         position: relative;
+        width: calc(100% - 5rem);
+        margin: 1.5rem 2.5rem 0;
         background-color: rgba(255,255,255,0);
         outline: 10px solid rgba(255,255,255,0);
         transition: background-color 600ms ease, outline 500ms ease;
@@ -445,22 +450,22 @@ body {
             position: absolute;
             text-align: center;
             padding-top: 1rem;
-            width: 85%;
-            height: 73%;
-            margin: 2%;
-            background-color: rgba($highlightFont, 0.05);
-            outline: 10px solid rgba($highlightFont, 0.05);
+            width: 100%;
+            height: 85%;
             z-index: 50;
             white-space: normal;
             overflow: visible;
+            width: calc(100% - 2rem);
+            margin: 1.5rem auto;
 
             & + .image-container {
-                margin-top: 3.65rem;
-                opacity: 0.01;
+                margin-top: 6rem;
+                opacity: 0.05;
+                transition: opacity 600ms ease-out;
             }
 
             h3 {
-                font-size: 2rem;
+                font-size: 1.5rem;
             }
 
             .description {
@@ -485,7 +490,6 @@ body {
     .image-container {
         position: relative;
         background: white;
-        margin: 1rem auto 1.5rem;
         box-shadow: 0 0 5px 0 rgba(0,0,0,0.35);
         z-index: 0;
 
@@ -524,6 +528,7 @@ body {
     .project-links {
         display: flex;
         justify-content: space-around;
+        margin-bottom: 1rem;
         width: 90%;
 
         a {
@@ -592,6 +597,47 @@ body {
         font-size: 3rem;
         color: white;
         cursor: pointer;
+    }
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 200px;
+    width: 100%;
+}
+
+.dark-mode {
+    background: $darkmode-bg-color;
+    color: white;
+    .menu-container .burger-menu > div,
+    .menu-container .burger-menu > div::before,
+    .menu-container .burger-menu > div::after {
+        background: white;
+    }
+
+    .menu {
+        background-color: rgba($darkmode-menu-color, 0.98);
+    }
+
+    .banner {
+        background: rgba($header-bg-color, 0.6);
+        background: none;
+    }
+
+    .main::before {
+        background: linear-gradient(to bottom, $darkmode-bg-color 60%, rgba(0,0,0,0) 100%);
+    }
+    .fader {
+        background: none;
+        box-shadow: 0 0 4px 0 rgba($highlightFont, 0.7);
+        color: white;
+
+        .project-links a {
+            border: 1px solid white;
+            color: white;
+        }
     }
 }
 
@@ -724,6 +770,7 @@ body {
     
         .menu {
             top: -110vh;
+            opacity: 0;
             left: 0;
             width: 100vw;
             max-width: 100vw;
@@ -733,6 +780,8 @@ body {
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            background: rgba(0,0,0,0.97);
+            transition: top 400ms ease 400ms, opacity 400ms ease;
 
             ul {
                 margin: 0;
@@ -771,6 +820,12 @@ body {
 
     .menu-toggler:checked ~ .menu {
         top: 0;
+        opacity: 1;
+        transition: top 400ms ease 40ms;
+    }
+
+    .menu-toggler:not(:checked) ~ .menu {
+        opacity: 0;
     }
 }
 
@@ -790,7 +845,7 @@ body {
         }
     }
 
-    #github-link, #linkedin-link {
+    #email-link, #github-link, #linkedin-link {
         width: 2rem;
     }
 }
@@ -817,17 +872,11 @@ body {
     }
 
     .menu-container .menu {
-        // width: calc(#{$menu-width} * 1.3);
 
         ul {
             font-size: 1.8rem;
         }
     }
-
-    // .main {
-    //     margin-left: calc(#{$menu-width} * 1.2);
-    //     width: calc(100vw - (#{$menu-width} * 1.2));
-    // }
 
     .projects-container {
 
@@ -865,7 +914,6 @@ body {
     }
 
     .menu-container .menu {
-        // width: calc(#{$menu-width} * 2);
 
         ul {
             font-size: 2.5rem;
@@ -883,8 +931,6 @@ body {
     }
 
     .main {
-        // margin-left: calc(#{$menu-width} * 1.6);
-        // width: calc(100vw - (#{$menu-width} * 1.6));
 
         .fader {
             padding: 3rem 4rem;
@@ -893,31 +939,3 @@ body {
     }
 }
 
-.dark-mode {
-    background: $darkmode-bg-color;
-    color: white;
-    .menu-container .burger-menu > div,
-    .menu-container .burger-menu > div::before,
-    .menu-container .burger-menu > div::after {
-        background: white;
-    }
-
-    .banner {
-        background: rgba($header-bg-color, 0.6);
-        background: none;
-    }
-
-    .main::before {
-        background: linear-gradient(to bottom, $darkmode-bg-color 60%, rgba(0,0,0,0) 100%);
-    }
-    .fader {
-        background: none;
-        box-shadow: 0 0 4px 0 rgba($highlightFont, 0.35);
-        color: white;
-
-        .project-links a {
-            border: 1px solid white;
-            color: white;
-        }
-    }
-}
