--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -413,7 +413,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 70%;
+    width: 60%;
     max-width: 1300px;
     margin: 2rem 0;
     opacity: 0;
@@ -464,7 +464,7 @@ body {
             margin: 1.5rem auto;
 
             & + .image-container {
-                margin-top: 6rem;
+                margin-top: 5.5rem;
                 opacity: 0.05;
                 transition: opacity 600ms ease-out;
             }
@@ -753,9 +753,8 @@ body {
 
             .project-description:hover {
                 margin: 0;
-                padding-top: 0;
+                padding-top: 1rem;
                 width: 100%;
-                height: 100%;
 
                 & > div {
                     margin: 0.5rem;
@@ -838,6 +837,16 @@ body {
 
     .menu-toggler:not(:checked) ~ .menu {
         opacity: 0;
+    }
+
+    .no-select {
+        user-select: none;
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        -webkit-tap-highlight-color: transparent;
     }
 }
 
