Tweak to fader margin

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -431,6 +431,10 @@ body {
     // clip-path: polygon(4% 0, 100% 0, 96% 100%, 0 100%);
     transform: translateX(25vw);
     transition: transform 650ms ease-out, opacity 250ms ease-in, width 400ms ease-in-out;
+
+    & :first-child {
+        margin-top: 0;
+    }
     
     .project-description {
         align-self: center;
