Removed 'read more' message on hovering over project description

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -520,6 +520,10 @@ body {
                 overflow-y: auto;
                 transition: margin-top 600ms ease-in-out;
 
+                &::after {
+                    display: none;
+                }
+
                 p {
                     margin-top: 0.5rem;
                 }
