--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -16,6 +16,15 @@
     box-sizing: border-box;
 }
 
+// @keyframes appearFromNowhere {
+//     0% {
+//       opacity: 0;
+//     }
+//     100% {
+//         opacity: 1;
+//     }
+//   }
+
 html, body {
     overflow-x: hidden;
 }
@@ -23,8 +32,19 @@ html, body {
 body {
     font-family: 'Montserrat', sans-serif;
 
-    h1, h2 {
-        width: 100%;
+    h1 {
+        margin-left: -2rem;
+        // animation: 1500ms ease-out 300ms 1 appearFromNowhere;
+
+        span {
+            padding-left: 5px;
+            font-size: 1.8rem;
+        }
+    }
+
+    .highlight-color {
+        font-size: 3rem;
+        color: $highlightFont;
     }
 
     div h2 {
@@ -32,13 +52,14 @@ body {
     }
 
     .section-title {
+        margin-top: 7rem;
+        margin-bottom: 2rem;
         padding-bottom: 5px;
         border-bottom: 1px solid black;
     }
-    
-    h1 {
-        color: $highlightFont;
-        margin-bottom: 1em;
+
+    .intro {
+        margin-bottom: 2rem;
     }
 
     a {
@@ -427,9 +448,9 @@ body {
     align-items: center;
     width: 60%;
     max-width: 1300px;
-    margin: 2rem 0;
     opacity: 0;
     color: black;
+    margin-bottom: 2rem;
     // background-color: rgba($highlightFont, 0.45);
     border-radius: 6px;
     box-shadow: 0 2px 8px 0px rgba($primary, 0.95);
@@ -442,7 +463,7 @@ body {
         position: relative;
         width: calc(100% - 5rem);
         margin: 1rem 2.5rem 0;
-        height: 4rem;
+        height: 5.5rem;
         overflow: hidden;
         background-color: rgba(255,255,255,0);
         outline: 10px solid rgba(255,255,255,0);
@@ -454,20 +475,23 @@ body {
         }
 
         .description {
-            white-space: nowrap;
+            // white-space: nowrap;
             overflow: hidden;
-            text-overflow: ellipsis;
+            // text-overflow: ellipsis;
             padding-bottom: 1rem;
             position: relative;
+            height: 3.7rem;
 
             &::after {
                 position: absolute;
                 content: '[Read more...]';
-                top: 0;
-                right: 0;
-                padding-top: 10px;
-                height: 100%;
-                padding-left: 10px;
+                text-align: left;
+                top: 2.5rem;
+                padding-top: 0.2em;
+                left: 0;
+                width: 100%;
+                height: 1.5rem;
+                font-size: 0.8em;
                 background: white;
             }
 
@@ -712,6 +736,9 @@ body {
 
     body {
         font-size: 0.8rem;
+        h1 {
+            margin-left: -0.3rem;
+        }
     }
 
     .header {
@@ -775,6 +802,14 @@ body {
             clip-path: none;
             padding: 0 0.75rem;
 
+            .description {
+                height: 3rem;
+
+                &::after {
+                    top: 2rem;
+                }
+            }
+
             .image-container {
                 margin: 0.5rem auto;
                 &::before, &::after {
@@ -783,10 +818,6 @@ body {
             }
 
             .project-description {
-
-                .description::after {
-                    content: 'More...';
-                }
             
                 &:hover {
                     margin: 0;
