Fixed issue with height of description on hover

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -540,7 +540,7 @@ body {
                 margin-top: 2rem;
                 padding: 0 15%;
                 white-space: normal;
-                max-height: 70%;
+                height: 70%;
                 overflow-y: auto;
                 transition: margin-top 600ms ease-in-out;
 
