--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -811,7 +811,7 @@ body {
             }
 
             .image-container {
-                margin: 0 auto;
+                margin: 0 auto 1rem;
                 &::before, &::after {
                     display: none;
                 }
