--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -459,6 +459,19 @@ body {
         outline: 10px solid rgba(255,255,255,0);
         transition: background-color 600ms ease, outline 500ms ease;
 
+        &::after {
+            position: absolute;
+            content: '[Read more...]';
+            text-align: right;
+            bottom: 0;
+            padding-top: 0.2em;
+            right: 0;
+            width: 16%;
+            height: 1.3rem;
+            font-size: 0.8em;
+            background: white;
+        }
+
         & > div {
             margin-top: 0.25rem;
             margin-bottom: 0.5rem;
@@ -471,19 +484,6 @@ body {
             padding-bottom: 1rem;
             position: relative;
             height: 3.7rem;
-
-            &::after {
-                position: absolute;
-                content: '[Read more...]';
-                text-align: left;
-                top: 2.5rem;
-                padding-top: 0.2em;
-                left: 0;
-                width: 100%;
-                height: 1.5rem;
-                font-size: 0.8em;
-                background: white;
-            }
 
             & ~ div {
                 width: 80%;
@@ -514,6 +514,10 @@ body {
             width: calc(100% - 2rem);
             margin: 1.5rem auto;
 
+            &::after {
+                display: none;
+            }
+
             & + .image-container {
                 margin-top: 7.5rem;
                 opacity: 0.05;
@@ -533,10 +537,6 @@ body {
                 height: 70%;
                 overflow-y: auto;
                 transition: margin-top 600ms ease-in-out;
-
-                &::after {
-                    display: none;
-                }
 
                 p {
                     margin-top: 0.5rem;
@@ -808,7 +808,13 @@ body {
             }
 
             .project-description {
-            
+                height: 4.8rem;
+
+                &::after {
+                    width: 25%;
+                    bottom: 0.2rem;
+                }
+
                 &:hover {
                     margin: 0;
                     padding-top: 1rem;
