--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -821,6 +821,7 @@ body {
                     padding-top: 1rem;
                     width: 100%;
                     height: 85%;
+                    border-bottom: none;
 
 
                     & + .image-container {
