--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,15 +6,6 @@
     box-sizing: border-box;
 }
 
-// @keyframes appearFromNowhere {
-//     0% {
-//       opacity: 0;
-//     }
-//     100% {
-//         opacity: 1;
-//     }
-//   }
-
 html, body {
     overflow-x: hidden;
 }
@@ -24,11 +15,10 @@ body {
 
     h1 {
         margin-left: -2rem;
-        // animation: 1500ms ease-out 300ms 1 appearFromNowhere;
 
         span {
             padding-left: 5px;
-            font-size: 1.8rem;
+            font-size: 1.6rem;
         }
     }
 
@@ -70,7 +60,7 @@ body {
     height: calc(#{$burger-dimensions} * 2.5);
     z-index: 10;
 
-    //scroll fader using pseudo element
+    //Fading gradient using pseudo element
     &::before {
         content: '';
         position: absolute;
@@ -197,7 +187,8 @@ body {
             position: absolute;
             top: 20px;
             width: 100%;
-            padding: 0 25%;
+            right: 0;
+            padding-right: 15%;
             height: 30px;
             display: flex;
             justify-content: flex-end;
@@ -368,12 +359,10 @@ body {
     flex-direction: column;
     align-items: center;
     height: 100%;
-    // height: calc(100vh - (#{$contactHeight} * 1.4));
     width: 100%;
     margin-top: calc(#{$contactHeight} * 1.4);
     padding-top: calc(#{$contactHeight} * 1.2);
     overflow-x: hidden;
-    // gap: 4rem;
 
     & > .text-content {
         width: 70%;
@@ -441,7 +430,6 @@ body {
     opacity: 0;
     color: black;
     margin-bottom: 2rem;
-    // background-color: rgba($highlightFont, 0.45);
     border-radius: 6px;
     box-shadow: 0 2px 8px 0px rgba($primary, 0.95);
     // clip-path: polygon(4% 0, 100% 0, 96% 100%, 0 100%);
@@ -732,8 +720,6 @@ body {
     }
 
     .header {
-        height: calc(#{$burger-dimensions} * 2);
-        height: 0;
 
         .banner {
             top: 0;
@@ -813,7 +799,7 @@ body {
 
                 &::after {
                     width: 25%;
-                    bottom: -0.5rem;
+                    bottom: -0.2rem;
                 }
 
                 &:hover {
@@ -846,6 +832,7 @@ body {
     }
 
     .menu-container {
+        z-index: 20;
 
         .menu-toggler {
             display: block;
@@ -867,7 +854,7 @@ body {
             transition: top 400ms ease 400ms, opacity 400ms ease;
 
             #darkmode-container {
-                right: 10px;
+                right: 30px;
                 padding: 0;
             }
 
